force-app/main/default/objects/Sub_District__c/Sub_District__c.object-meta.xml
<CustomObject>
    <label>Sub District</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Districts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>