force-app/main/default/objects/Sub_District__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <referenceTo>District__c</referenceTo>
    <relationshipLabel>Sub Discticts</relationshipLabel>
    <relationshipName>Sub_Discticts</relationshipName>
    <type>Lookup</type>
</CustomField>