force-app/main/default/objects/Sub_District__c/fields/Location_code__c.field-meta.xml
<CustomField>
    <fullName>Location_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>