force-app/main/default/objects/Sub_District__c/fields/Zip_code__c.field-meta.xml
<CustomField>
    <fullName>Zip_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>