force-app/main/default/objects/Sub_District__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Code__c</columns>
    <columns>NAME</columns>
    <columns>District__c</columns>
    <columns>Location_code__c</columns>
    <columns>Zip_code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>